# Urho3D

./: .gitignore  CMakeLists.txt  Credits.md  README.md  rakefile
.github/workflows/: build.yml  main.yml
CMake/Modules/: CheckCompilerToolchain.cmake  UrhoOptions.cmake  ucm.cmake
Docs/: CMakeLists.txt  Doxyfile.in  GettingStarted.dox  Reference.dox  Urho3D.dox
Source/: CMakeLists.txt
Source/Clang-Tools/: CMakeLists.txt
Source/Extras/: CMakeLists.txt
Source/Player/: CMakeLists.txt  Player.cpp  Player.h  PlayerHost.cpp
Source/Samples/: CMakeLists.txt  Sample.cpp  Sample.h  SamplesManager.cpp  SamplesManager.h
Source/Samples/02_HelloGUI/: HelloGUI.cpp
Source/Samples/03_Sprites/: Sprites.cpp
Source/Samples/06_SkeletalAnimation/: Mover.cpp  SkeletalAnimation.cpp
Source/Samples/07_Billboards/: Billboards.cpp
Source/Samples/08_Decals/: Decals.cpp
Source/Samples/11_Physics/: Physics.cpp
Source/Samples/13_Ragdolls/: Ragdolls.cpp
Source/Samples/14_SoundEffects/: SoundEffects.cpp  SoundEffects.h
Source/Samples/15_Navigation/: Navigation.cpp
Source/Samples/16_Chat/: Chat.cpp
Source/Samples/17_SceneReplication/: SceneReplication.cpp
Source/Samples/18_CharacterDemo/: CharacterDemo.cpp
Source/Samples/19_VehicleDemo/: VehicleDemo.cpp
Source/Samples/20_HugeObjectCount/: HugeObjectCount.cpp
Source/Samples/23_Water/: Water.cpp
Source/Samples/24_Urho2DSprite/: Urho2DSprite.cpp
Source/Samples/26_ConsoleInput/: ConsoleInput.cpp
Source/Samples/27_Urho2DPhysics/: Urho2DPhysics.cpp
Source/Samples/28_Urho2DPhysicsRope/: Urho2DPhysicsRope.cpp
Source/Samples/29_SoundSynthesis/: SoundSynthesis.cpp
Source/Samples/30_LightAnimation/: LightAnimation.cpp
Source/Samples/32_Urho2DConstraints/: Urho2DConstraints.cpp
Source/Samples/34_DynamicGeometry/: DynamicGeometry.cpp
Source/Samples/35_SignedDistanceFieldText/: SignedDistanceFieldText.cpp
Source/Samples/36_Urho2DTileMap/: Urho2DTileMap.cpp
Source/Samples/37_UIDrag/: UIDrag.cpp
Source/Samples/39_CrowdNavigation/: CrowdNavigation.cpp  CrowdNavigation.h
Source/Samples/40_L10n/: L10n.cpp
Source/Samples/42_PBRMaterials/: CMakeLists.txt  PBRMaterials.cpp
Source/Samples/43_HttpRequestDemo/: HttpRequestDemo.cpp
Source/Samples/44_RibbonTrailDemo/: RibbonTrailDemo.cpp
Source/Samples/46_RaycastVehicle/: RaycastVehicleDemo.cpp  Vehicle.cpp  Vehicle.h
Source/Samples/47_Typography/: Typography.cpp  Typography.h
Source/Samples/48_Hello3DUI/: Hello3DUI.cpp
Source/Samples/49_Urho2DIsometricDemo/: Character2D.cpp  Urho2DIsometricDemo.cpp  Urho2DIsometricDemo.h
Source/Samples/50_Urho2DPlatformer/: Character2D.cpp  Urho2DPlatformer.cpp
Source/Samples/51_Urho2DStretchableSprite/: Urho2DStretchableSprite.cpp
Source/Samples/52_NATPunchtrough/: NATPunchtrough.cpp  NATPunchtrough.h
Source/Samples/53_LANDiscovery/: LANDiscovery.cpp  LANDiscovery.h
Source/Samples/54_WindowSettingsDemo/: WindowSettingsDemo.cpp
Source/Samples/Utilities2D/: CMakeLists.txt  Sample2D.cpp  Sample2D.h
Source/Tests/: Basic.cpp  CMakeLists.txt  Main.cpp
Source/Tests/Base/: Algorithm.cpp  Array.cpp  Callback.cpp  Foundation.cpp  Functors.cpp  Iterator.cpp  Limits.cpp  Pair.cpp  Span.cpp  StrView.cpp  Tuple.cpp  TypeTraits.cpp  TypeUtils.cpp  Utility.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/OgreBatchConverter/: CMakeLists.txt
Source/Tools/PackageTool/: PackageTool.cpp
Source/Tools/RampGenerator/: CMakeLists.txt
Source/Tools/SpritePacker/: CMakeLists.txt  SpritePacker.cpp
Source/Tools/Urho3DPlayer/: CMakeLists.txt  Urho3DPlayer.cpp  Urho3DPlayer.h
Source/Urho3D/: BindAll.cpp  CMakeLists.txt  LibraryInfo.cpp  Precompiled.h  Urho3D.h  Urho3DBase.c  Urho3DBase.h  Urho3DConfig.h  WindowsSupport.h
Source/Urho3D/AngelScript/: APITemplates.h  IOAPI.cpp  ResourceAPI.cpp
Source/Urho3D/Audio/: Audio.cpp  BufferedSoundStream.cpp  BufferedSoundStream.h
Source/Urho3D/Base/: Algorithm.h  Array.h  Callback.h  Concepts.h  Foundation.cpp  Foundation.h  Functors.h  Iter.h  Iterator.h  Limits.h  Pair.h  Span.h  StrView.h  Tuple.h  TypeTraits.h  TypeUtils.h  Utility.h  ValueTraits.h
Source/Urho3D/Container/: Allocator.cpp  Allocator.h  FlagSet.h  ForEach.h  HashBase.cpp  HashBase.h  HashMap.h  HashSet.h  LinkedList.h  List.h  ListBase.h  Ptr.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.h  VectorBase.h
Source/Urho3D/Core/: Condition.h  Context.cpp  Mutex.h  Object.cpp  ProcessUtils.cpp  StringUtils.h  Thread.h  Variant.cpp  Variant.h
Source/Urho3D/Engine/: Application.cpp  Console.cpp  Engine.cpp  EngineDefs.h
Source/Urho3D/Graphics/: AnimationState.cpp  Drawable.cpp  Graphics.cpp  OcclusionBuffer.cpp  OctreeQuery.h  View.cpp
Source/Urho3D/Graphics/Direct3D11/: D3D11Graphics.cpp
Source/Urho3D/Graphics/Direct3D9/: D3D9Graphics.cpp  D3D9GraphicsImpl.h
Source/Urho3D/Graphics/OpenGL/: OGLGraphics.cpp  OGLGraphicsImpl.h
Source/Urho3D/IK/: IKEffector.h  IKSolver.h
Source/Urho3D/IO/: File.cpp  FileSystem.cpp  Log.cpp  Log.h  MemoryBuffer.cpp  NamedPipe.h  PackageFile.cpp  PackageFile.h
Source/Urho3D/Input/: Input.cpp  InputConstants.h
Source/Urho3D/Network/: Connection.cpp  Network.cpp
Source/Urho3D/Resource/: Image.cpp  Image.h  ResourceCache.cpp  ResourceCache.h  XMLElement.cpp  XMLFile.cpp
Source/Urho3D/UI/: Cursor.cpp  FontFaceFreeType.cpp  LineEdit.cpp  UI.cpp  UIElement.cpp
Source/Urho3D/Urho2D/: Sprite2D.cpp  SpriterData2D.h
android/: build.gradle
android/launcher-app/: CMakeLists.txt
android/launcher-app/src/main/java/io/urho3d/launcher/: LauncherActivity.kt
android/src/io/urho3d/: UrhoActivity.java
android/urho3d-lib/: build.gradle.kts
cmake/: CMake.props.in
cmake/Modules/: CCache.cmake  CheckCompilerToolchain.cmake  FindDirectX.cmake  FindUrho3D.cmake  UrhoCommon.cmake  UrhoOptions.cmake
cmake/Toolchains/: MinGW.cmake
script/: .build-options  .env-file  ci_build.sh
